// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAT_RECEIVED 1`] = `
Immutable.Map {
  "imageSrc": "bar",
}
`;

exports[`cat reducer without state uses default 1`] = `
Immutable.Map {
  "imageSrc": "",
}
`;
